--- a/socialapp/package.json
+++ b/socialapp/package.json
@@ -4,7 +4,7 @@
   "description": "a basic social media app",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "keywords": [
     "express",
@@ -15,7 +15,9 @@
   "dependencies": {
     "date-format": "^4.0.5",
     "express": "^4.17.3",
-    "moment": "^2.29.1"
+    "moment": "^2.29.1",
+    "swagger-ui-express": "^4.3.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
